# mcp-discord

./: .gitignore  README.md  pyproject.toml
mcp_discord/: server.py
src/discord_mcp/: server.py
tests/: test_read_messages.py
